--- a/public/css/main.css
+++ b/public/css/main.css
@@ -217,7 +217,7 @@ input[type=text], input[type=email], input[type=password] {
   width: 302px;
   position: absolute;
   top: 269px;
-  height:200px;
+  height:225px;
   left: 525px;
   border-radius: 5px;
   background-color: #f2f2f2;
@@ -363,5 +363,17 @@ input[type=text], input[type=email], input[type=password] {
   text-decoration: none;
 }
 #del-btn-expense:hover{
+  opacity: .7;
+}
+#sbt-btn-budget{
+  position: absolute;
+  left: 75px;
+  top: 149px;
+  border-radius: 4px;
+  padding: 2px 5px;
+  background-color: #35FF93;
+  opacity: 1;
+}
+#sbt-btn-budget:hover{
   opacity: .7;
 }
