--- a/views/about.hbs
+++ b/views/about.hbs
@@ -2,7 +2,7 @@
 <nav id="nav" class = "navbar navbar-dark" style="background-color:#60C394;">
         <ul class="nav nav-pills">
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Expenses</a>
+              <a class="nav-link text-white" href="/users/profile">Expenses</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="#">View Graph</a>
@@ -24,5 +24,42 @@
             </li> --}}
 </ul>
 </nav>
-      
+    <div class="content">
       <h3>About US</h3>
+      <div class="aboutOne">  
+            <div class="img">
+                <img src="../img/one.png" height="130px" width="130px" style="border-radius: 50%" alt="">
+            </div>                                
+            <div class="nameOne">
+                <p>Ajay Chakravarthy</p>
+            </div>
+            <div class="form-group">
+                <a class="link" href="#"><p>LinkedIn</p></a>
+            </div>
+          </div>
+
+          <div class="aboutTwo">  
+            <div class="img">
+                <img src="../img/two.png" height="130px" width="130px" style="border-radius: 50%" alt="">
+            </div>                                
+            <div class="nameTwo">
+                <p>Alok Hazarika</p>
+            </div>
+            <div class="form-group">
+                <a class="link"  href="#"><p>LinkedIn</p></a>
+            </div>
+          </div>
+
+          <div class="aboutThree">  
+            <div class="img">
+                <img src="https://simg.nicepng.com/png/small/42-428672_young-mans-face-silhouette-silhouette-clip-art-male.png" height="130px" width="130px" style="border-radius: 50%" alt="">
+            </div>                                
+            <div class="nameThree">
+                <p>Abhishek Mazumdar</p>
+            </div>
+            <div class="form-group">
+                <a class="link" href="#"><p>LinkedIn</p></a>
+            </div>
+          </div>
+        </div>  
+      
