--- a/views/edit-expense.hbs
+++ b/views/edit-expense.hbs
@@ -56,7 +56,7 @@
                  </div>                                   
                  
                <div id="sbt-btn-expense" >
-                    <input type="submit">
+                    <input value="EDIT" type="submit">
                </div>
                <div id="del-btn-expense" >
                     <div><a onclick="return confirm('Are you sure you want to delete this item?');" href="/users/deleteExpense/{{expense._id}}">DELETE EXPENSE</a></div>
