--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,4 +1,15 @@
 {{!-- <div class="header"></div> --}}
+<script>
+   function register() {
+      var pswd = document.getElementById('password').value;
+      var cpswd = document.getElementById('cpassword').value;
+
+      if(pswd != cpswd) {
+         alert('Passwords does not match.')
+         return false;
+      } return true;
+   }
+</script>
 <div class="containerSignup">
     <div class="signup-form">
         <form class="form-signin" method="POST" action="/users/signup">
@@ -18,7 +29,7 @@
                     <input name="cpassword" type="password" class="form-control" id="cpassword" aria-describedby="emailHelp" placeholder="Confirm Password" required >
               </div>
 
-            <input id="sbt-btn" type="submit">
+            <input id="sbt-btn" onclick="return register()" type="submit">
         </form>
     </div>
 </div>
