--- a/views/about.hbs
+++ b/views/about.hbs
@@ -23,12 +23,13 @@
               <a class="nav-link text-white" href="/users/profile" id="hey">..</a>
             </li> --}}
 </ul>
+<div class="welcome"><small>{{msg}}</small></div>
 </nav>
     <div class="content">
       <h3>About US</h3>
       <div class="aboutOne">  
             <div class="img">
-                <img src="../img/one.png" height="130px" width="130px" style="border-radius: 50%" alt="">
+                <img src="https://simg.nicepng.com/png/small/42-428672_young-mans-face-silhouette-silhouette-clip-art-male.png" height="130px" width="130px" style="border-radius: 50%" alt=""" height="130px" width="130px" style="border-radius: 50%" alt="">
             </div>                                
             <div class="nameOne">
                 <p>Ajay Chakravarthy</p>
@@ -40,7 +41,7 @@
 
           <div class="aboutTwo">  
             <div class="img">
-                <img src="../img/two.png" height="130px" width="130px" style="border-radius: 50%" alt="">
+                <img src="https://simg.nicepng.com/png/small/42-428672_young-mans-face-silhouette-silhouette-clip-art-male.png" height="130px" width="130px" style="border-radius: 50%" alt=""" height="130px" width="130px" style="border-radius: 50%" alt="">
             </div>                                
             <div class="nameTwo">
                 <p>Alok Hazarika</p>
