--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -42,6 +42,7 @@
               <a class="nav-link text-white" href="/users/profile" id="hey">..</a>
             </li> --}}
          </ul>
+         <div class="welcome"><small>{{msg}}</small></div>
       </nav>
       <div id="here"></div>
 {{!-- addExpense Button --}}
