Functional update of the app.

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -13,7 +13,7 @@
   </head>
 <body>
     <header>
-      <a class="logo" href="/users/profile"><b>LOGO<b></a>
+      <a class="logo" href="/users/profile"><strong>Expense</strong>Tracker</a>
     </header>
       {{{body}}}
 
