Updated with final edits

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -17,7 +17,7 @@
               <a class="nav-link text-white" href="/users/logout" id="logout-but">LOGOUT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/users/about" id="about-but">ABOUT-US</a>
+              <a class="nav-link active" href="/users/about" id="about-but">About-Us</a>
             </li>
             {{!-- <li class="nav-item">
               <a class="nav-link text-white" href="/users/profile" id="hey">..</a>
@@ -27,10 +27,10 @@
 </nav>
     <div class="content">
       <h3>About US</h3>
-      <div class="aboutOne">  
+      <div class="aboutOne">
             <div class="img">
                 <img src="https://simg.nicepng.com/png/small/42-428672_young-mans-face-silhouette-silhouette-clip-art-male.png" height="130px" width="130px" style="border-radius: 50%" alt=""" height="130px" width="130px" style="border-radius: 50%" alt="">
-            </div>                                
+            </div>
             <div class="nameOne">
                 <p>Ajay Chakravarthy</p>
             </div>
@@ -39,10 +39,10 @@
             </div>
           </div>
 
-          <div class="aboutTwo">  
+          <div class="aboutTwo">
             <div class="img">
                 <img src="https://simg.nicepng.com/png/small/42-428672_young-mans-face-silhouette-silhouette-clip-art-male.png" height="130px" width="130px" style="border-radius: 50%" alt=""" height="130px" width="130px" style="border-radius: 50%" alt="">
-            </div>                                
+            </div>
             <div class="nameTwo">
                 <p>Alok Hazarika</p>
             </div>
@@ -51,10 +51,10 @@
             </div>
           </div>
 
-          <div class="aboutThree">  
+          <div class="aboutThree">
             <div class="img">
                 <img src="https://simg.nicepng.com/png/small/42-428672_young-mans-face-silhouette-silhouette-clip-art-male.png" height="130px" width="130px" style="border-radius: 50%" alt="">
-            </div>                                
+            </div>
             <div class="nameThree">
                 <p>Abhishek Mazumdar</p>
             </div>
@@ -62,5 +62,4 @@
                 <a class="link" href="#"><p>LinkedIn</p></a>
             </div>
           </div>
-        </div>  
-      
+        </div>
