--- a/views/home.hbs
+++ b/views/home.hbs
@@ -3,3 +3,10 @@
 
       <a id="signup-btn" href="/users/signup">SignUp</a>
       <a id="signin-btn" style="margin-top: 25px;" href="/users/signin">SignIn</a>
+
+      <div class="textdiv">
+         <div class="one"></div>
+         <div class="two"></div>
+         <div class="three"></div>
+         <div class="four"></div>
+     </div>
