--- a/public/css/main.css
+++ b/public/css/main.css
@@ -13,7 +13,7 @@ header{
     margin-left: 0;
     margin-right: 0;
     margin-top: 0;
-    width: 100%; 
+    width: 100%;
 }
 .logo{
   position: absolute;
@@ -37,8 +37,7 @@ header{
     background-color: #35FF93;
     color: white;
     text-decoration: none;
-    opacity: 0.6;
-    transition: 0.5s;
+    opacity: 0.7;
 }
 #signin-btn{
     position: absolute;
@@ -48,8 +47,7 @@ header{
     background-color: #35FF93;
     color: white;
     text-decoration: none;
-    opacity: 0.6;
-    transition: 0.5s;
+    opacity: 0.7;
 }
 #signup-btn:hover, #signin-btn:hover {
     opacity: 1;
@@ -189,7 +187,7 @@ input[type=text], input[type=email], input[type=password] {
 }
 #hey{
   position: absolute;
-  
+
 }
 #comment{
   height: 80px;
@@ -239,7 +237,7 @@ input[type=text], input[type=email], input[type=password] {
 .close-card{
   position: absolute;
   right: 3px;
-  background-color: #35FF93
+  background-color: #35FF93;
   opacity: .35;
   transition: .5s;
 }
@@ -252,7 +250,7 @@ input[type=text], input[type=email], input[type=password] {
   padding: 43px 17px;
   top: 8px;
   color: white;
-  background-color: #35FF93;
+  background-color: #FB7C28;
   opacity: 1.0;
 }
 .edit-card:hover{
@@ -263,7 +261,7 @@ input[type=text], input[type=email], input[type=password] {
   left: 250px;
   right: 250px;
   top:250px;
-  bottom: 250px; 
+  bottom: 250px;
 }
 .reset-block {
   position: absolute;
@@ -331,9 +329,9 @@ input[type=text], input[type=email], input[type=password] {
 #close-edit-expense{
   position: absolute;
   right:5px;
-  top:5px;
-} padding: 20px;
-} */
+  top:5px;/*}*/
+ padding: 20px;
+}
 .list{
   width: 350px;
 }
@@ -347,8 +345,8 @@ input[type=text], input[type=email], input[type=password] {
 #del-btn-expense{
   position: absolute;
   padding: 14px 57px;
-  background-color: #35FF93;
   bottom: 10px;
+  background-color: #35FF93;
   left: 20px;
   border-radius: 4px;
   cursor: pointer;
@@ -366,7 +364,6 @@ input[type=text], input[type=email], input[type=password] {
   top: 149px;
   border-radius: 4px;
   padding: 2px 5px;
-  background-color: #35FF93;
   opacity: 1;
 }
 #sbt-btn-budget:hover{
@@ -376,7 +373,7 @@ input[type=text], input[type=email], input[type=password] {
   position: absolute;
   top: 180px;
   left: 200px;
-  
+
 }
 .aboutOne{
   width: 256px;
@@ -453,4 +450,64 @@ img{
   position: absolute;
   left: 68px;
   top: 31px;
+}
+.textdiv{
+  position: absolute;
+  left: 20px;
+  top: 200px;
+  width: 902px;
+  height: 500px;
+  background-color: #35FF93;
+}
+.one{
+  position: absolute;
+  left: 2px;
+  border: 1px solid white;
+  top: 2px;
+  width: 265px;
+  height: 296px;
+}
+.two{
+  position: absolute;
+  left: 2px;
+  border: 1px solid white;
+  bottom: 2px;
+  width: 535px;
+  height: 199px;
+}
+.three{
+  position: absolute;
+  right: 2px;
+  top: 2px;
+  border: 1px solid white;
+  width: 631px;
+  height: 296px;
+}
+.four{
+  position: absolute;
+  right: 2px;
+  bottom: 2px;
+  border: 1px solid white;
+  width: 362px;
+  height: 199px;
+}
+.one:hover{
+  opacity: .7;
+  color: #60C394;
+  transition: .4s;
+}
+.two:hover{
+  opacity: .6;
+  color: #60C394;
+  transition: .45s;
+}
+.three:hover{
+  opacity: .7;
+  color: #60C394;
+  transition: .55s;
+}
+.four:hover{
+  opacity: .65;
+  color: #60C394;
+  transition: .2s;
 }
